--- a/AutosGallery/app/build.gradle
+++ b/AutosGallery/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'me.relex:circleindicator:1.3.2'  // resimler üzerine nokta koymak
+    //implementation 'me.relex:circleindicator:1.2.2@aar'
    // implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.google.code.gson:gson:2.8.1'
