--- a/AutosGallery/app/src/main/AndroidManifest.xml
+++ b/AutosGallery/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AutosGallery"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Activity.IlanDetayActivity"></activity>
+        <activity android:name=".Activity.KisiBilgiActivity"></activity>
+        <activity android:name=".Activity.IlanDetayActivity" />
         <activity android:name=".Activity.IlanlarActivity" />
         <activity android:name=".Activity.IlanlarimActivity" />
         <activity android:name=".Activity.IlanBilgileriActivity" />
